--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,3 @@
 {
-  "name": "chain_gang",
-  "version": "0.0.1",
-  "dependencies": {
-    "post-install-cmd": [
-      "php artisan clear-compiled",
-      "php artisan optimize",
-      "chmod -R 777 public/"
-    ]
-  }
+  "name": ""
 }
